@@ -7,9 +7,11 @@ import com.facenet.shipsregistry.request.DetailMeasurementRequestBody;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * @author: hungdinh
@@ -283,8 +285,8 @@ public class MapperUtils {
                             .map(this::frameNumberMapper)
                             .toList();
             formTM7DTO.setFrameNumberList(frameNumberDTOList);
-            formTM7DTO.setFormIndex(formTM7.getFormIndex());
         }
+        formTM7DTO.setFormIndex(formTM7.getFormIndex());
         return formTM7DTO;
     }
 
@@ -294,7 +296,13 @@ public class MapperUtils {
      * @return
      */
     public FormTM6DTO formTM6Mapper(FormTM6 formTM6) {
-        FormTM6DTO formTM6DTO = modelMapper.map(formTM6, FormTM6DTO.class);
+        FormTM6DTO formTM6DTO = FormTM6DTO.builder()
+                .id(formTM6.getId())
+                .displayName(formTM6.getDisplayName())
+                .code(formTM6.getCode())
+                .locationOfStructure(formTM6.getLocationOfStructure())
+                .structuralMembers(formTM6.getStructuralMembers())
+                .build();
         List<StructuralDescriptionTM6DTO> structuralDescriptionTM6DTOList =
                 formTM6.getStructuralDescriptionTM6List().stream()
                         .map(this::structuralMemberTM6Mapper)
@@ -310,21 +318,28 @@ public class MapperUtils {
      * @return
      */
     public MeasurementTM6DTO measurementTM6Mapper(MeasurementTM6 measurementTM6) {
-        MeasurementTM6DTO measurementTM6DTO = modelMapper.map(measurementTM6, MeasurementTM6DTO.class);
+        MeasurementTM6DTO measurementTM6DTO = MeasurementTM6DTO.builder()
+                .id(measurementTM6.getId())
+                .description(measurementTM6.getDescription())
+                .item(measurementTM6.getItem())
+                .build();
         if (measurementTM6.getDetailMeasurement() != null) {
             measurementTM6DTO.setDetailMeasurement(detailMeasurementMapper(measurementTM6.getDetailMeasurement()));
         }
+        log.info("{}", measurementTM6.getId());
         return measurementTM6DTO;
     }
 
     public StructuralDescriptionTM6DTO structuralMemberTM6Mapper(StructuralDescriptionTM6 structuralDescriptionTM6) {
-        StructuralDescriptionTM6DTO structuralDescriptionTM6DTO =
-                modelMapper.map(structuralDescriptionTM6, StructuralDescriptionTM6DTO.class);
+        StructuralDescriptionTM6DTO structuralDescriptionTM6DTO = StructuralDescriptionTM6DTO.builder()
+                .id(structuralDescriptionTM6.getId())
+                .structuralDescriptionTitle(structuralDescriptionTM6.getStructuralDescriptionTitle())
+                .build();
         if (structuralDescriptionTM6.getMeasurementTM6List() != null) {
             List<MeasurementTM6DTO> measurementTM6DTOList =
                     structuralDescriptionTM6.getMeasurementTM6List()
                     .stream().map(this::measurementTM6Mapper)
-                    .toList();
+                    .collect(Collectors.toList());
             structuralDescriptionTM6DTO.setMeasurementTM6DTOList(measurementTM6DTOList);
         }
         return structuralDescriptionTM6DTO;
@@ -361,9 +376,13 @@ public class MapperUtils {
      * @return
      */
     public DetailMeasurementDTO detailMeasurementMapper(DetailMeasurement detailMeasurement) {
-        DetailMeasurementDTO detailMeasurementDTO =
-                modelMapper.map(detailMeasurement, DetailMeasurementDTO.class);
-
+        DetailMeasurementDTO detailMeasurementDTO = DetailMeasurementDTO.builder()
+                .originalThickness(detailMeasurement.getOriginalThickness())
+                .maxAlwbDim(detailMeasurement.getMaxAlwbDim())
+                .gaugedP(detailMeasurement.getGaugedP())
+                .gaugedS(detailMeasurement.getGaugedS())
+                .percent(detailMeasurement.getPercent())
+                .build();
         return detailMeasurementDTO;
     }
 
@@ -449,18 +468,14 @@ public class MapperUtils {
 
     /**
      *
-     *
      * @param reportIndex
      * @return
      */
-    public ReportIndexDTO reportIndexMapper(ReportIndex reportIndex) {
+    public ReportIndexDTO reportIndexDTOMapperAllForm(ReportIndex reportIndex) {
         ReportIndexDTO reportIndexDTO = modelMapper.map(reportIndex, ReportIndexDTO.class);
         reportIndexDTO.setReportNo(reportIndex.getGeneralParticulars().getReportNo());
         List<FormDTO> formDTOList = new ArrayList<>();
         if (reportIndex.getFormTM1List() != null) {
-            //                        FormTM1DTO formTM1DTO = modelMapper.map(formTM1, FormTM1DTO.class);
-            //                        formTM1DTO.setFormIndex(formTM1.getFormIndex());
-            //                        return formTM1DTO;
             formDTOList.addAll(reportIndex.getFormTM1List().stream()
                     .map(this::formTM1Mapper)
                     .toList());
@@ -493,6 +508,135 @@ public class MapperUtils {
         if (reportIndex.getFormTM7List() != null) {
             formDTOList.addAll(reportIndex.getFormTM7List().stream()
                     .map(this::formTM7Mapper)
+                    .toList());
+        }
+        formDTOList.sort(Comparator.comparingInt(FormDTO::getFormIndex));
+        reportIndexDTO.setFormList(formDTOList);
+        return reportIndexDTO;
+    }
+
+    /**
+     *
+     *
+     * @param reportIndex
+     * @return
+     */
+    public ReportIndexDTO reportIndexMapper(ReportIndex reportIndex) {
+        ReportIndexDTO reportIndexDTO = modelMapper.map(reportIndex, ReportIndexDTO.class);
+        reportIndexDTO.setReportNo(reportIndex.getGeneralParticulars().getReportNo());
+        List<FormDTO> formDTOList = new ArrayList<>();
+        if (reportIndex.getFormTM1List() != null) {
+            //                        FormTM1DTO formTM1DTO = modelMapper.map(formTM1, FormTM1DTO.class);
+            //                        formTM1DTO.setFormIndex(formTM1.getFormIndex());
+            //                        return formTM1DTO;
+            formDTOList.addAll(reportIndex.getFormTM1List().stream()
+                    .map(formTM1 -> {
+                        FormTM1DTO formTM1DTO = new FormTM1DTO("TM1", formTM1.getStrakePosition(), formTM1.getDisplayName(), null);
+                        formTM1DTO.setCode(formTM1.getCode());
+                        formTM1DTO.setId(formTM1.getId());
+                        formTM1DTO.setFormIndex(formTM1.getFormIndex());
+                        String displayName = formTM1.getDisplayName() != null &&
+                                !Objects.equals(formTM1.getDisplayName(), "") ?
+                                formTM1.getDisplayName() : "TM1" + formTM1.getCode();
+                        formTM1DTO.setDisplayname(displayName);
+                        return formTM1DTO;
+                    })
+                    .toList());
+        }
+        if (reportIndex.getFormTM2List() != null) {
+            formDTOList.addAll(reportIndex.getFormTM2List().stream()
+                    .map(formTM2 -> {
+                        FormTM2DTO formTM2DTO = new FormTM2DTO(formTM2.getName().toUpperCase(),
+                                formTM2.getName(), formTM2.getDisplayName(), null, formTM2.getFirstFrameNoTM2(),
+                                formTM2.getSecondFrameNoTM2(), formTM2.getThirdFrameNoTM2());
+                        formTM2DTO.setFormIndex(formTM2.getFormIndex());
+                        String displayName = formTM2.getDisplayName() != null &&
+                                !Objects.equals(formTM2.getDisplayName(), "") ?
+                                formTM2.getDisplayName() : formTM2.getName() + formTM2.getCode();
+                        formTM2DTO.setDisplayname(displayName);
+                        formTM2DTO.setCode(formTM2.getCode());
+                        formTM2DTO.setId(formTM2.getId());
+                        return formTM2DTO;
+                    })
+                    .toList());
+        }
+        if (reportIndex.getFormTM3List() != null) {
+            formDTOList.addAll(reportIndex.getFormTM3List().stream()
+                    .map(formTM3 -> {
+                        FormTM3DTO formTM3DTO = new FormTM3DTO("TM3", formTM3.getDisplayName(),formTM3.getFirstFrameNo(),
+                                formTM3.getSecondFrameNo(), formTM3.getThirdFrameNo(), null);
+                        formTM3DTO.setFormIndex(formTM3.getFormIndex());
+                        formTM3DTO.setId(formTM3.getId());
+                        String displayName = formTM3.getDisplayName() != null &&
+                                !Objects.equals(formTM3.getDisplayName(), "") ?
+                                formTM3.getDisplayName() : "TM3" + formTM3.getCode();
+                        formTM3DTO.setDisplayname(displayName);
+                        formTM3DTO.setCode(formTM3.getCode());
+                        return formTM3DTO;
+                    })
+                    .toList());
+        }
+        if (reportIndex.getFormTM4List() != null) {
+            formDTOList.addAll(reportIndex.getFormTM4List().stream()
+                    .map(formTM4 -> {
+                        FormTM4DTO formTM4DTO = new FormTM4DTO("TM4", formTM4.getTankDescription(),
+                                formTM4.getDisplayName(), formTM4.getLocationOfStructure(), null);
+                        formTM4DTO.setFormIndex(formTM4.getFormIndex());
+                        formTM4DTO.setCode(formTM4.getCode());
+                        formTM4DTO.setId(formTM4.getId());
+                        String displayName = formTM4.getDisplayName() != null &&
+                                !Objects.equals(formTM4.getDisplayName(), "") ?
+                                formTM4.getDisplayName() : "TM4" + formTM4.getCode();
+                        formTM4DTO.setDisplayname(displayName);
+                        return formTM4DTO;
+                    })
+                    .toList());
+        }
+        if (reportIndex.getFormTM5List() != null) {
+            formDTOList.addAll(reportIndex.getFormTM5List().stream()
+                    .map(formTM5 -> {
+                        FormTM5DTO formTM5DTO = new FormTM5DTO("TM5",formTM5.getDisplayName(), formTM5.getLocationOfStructure(),
+                                formTM5.getTankHolDescription(), formTM5.getFrameNo(), null);
+                        formTM5DTO.setFormIndex(formTM5.getFormIndex());
+                        formTM5DTO.setCode(formTM5.getCode());
+                        formTM5DTO.setId(formTM5.getId());
+                        String displayName = formTM5.getDisplayName() != null &&
+                                !Objects.equals(formTM5.getDisplayName(), "") ?
+                                formTM5.getDisplayName() : "TM5" + formTM5.getCode();
+                        formTM5DTO.setDisplayname(displayName);
+                        return formTM5DTO;
+                    })
+                    .toList());
+        }
+        if (reportIndex.getFormTM6List() != null) {
+            formDTOList.addAll(reportIndex.getFormTM6List().stream()
+                    .map(formTM6 -> {
+                        FormTM6DTO formTM6DTO = new FormTM6DTO("TM6", formTM6.getStructuralMembers(),
+                                formTM6.getDisplayName(), formTM6.getLocationOfStructure(), null);
+                        formTM6DTO.setId(formTM6.getId());
+                        formTM6DTO.setCode(formTM6.getCode());
+                        formTM6DTO.setFormIndex(formTM6.getFormIndex());
+                        String displayName = formTM6.getDisplayName() != null &&
+                                !Objects.equals(formTM6.getDisplayName(), "") ?
+                                formTM6.getDisplayName() : "TM6" + formTM6.getCode();
+                        formTM6DTO.setDisplayname(displayName);
+                        return formTM6DTO;
+                    })
+                    .toList());
+        }
+        if (reportIndex.getFormTM7List() != null) {
+            formDTOList.addAll(reportIndex.getFormTM7List().stream()
+                    .map(formTM7 -> {
+                        FormTM7DTO formTM7DTO = new FormTM7DTO("TM7", formTM7.getName(), formTM7.getDisplayName(), null);
+                        formTM7DTO.setFormIndex(formTM7.getFormIndex());
+                        formTM7DTO.setId(formTM7.getId());
+                        formTM7DTO.setCode(formTM7.getCode());
+                        String displayName = formTM7.getDisplayName() != null &&
+                                !Objects.equals(formTM7.getDisplayName(), "") ?
+                                formTM7.getDisplayName() : "TM7" + formTM7.getCode();
+                        formTM7DTO.setDisplayname(displayName);
+                        return formTM7DTO;
+                    })
                     .toList());
         }
         formDTOList.sort(Comparator.comparingInt(FormDTO::getFormIndex));
